--- a/gb/19/1/30/n11013654.md
+++ b/gb/19/1/30/n11013654.md
@@ -1,72 +1,71 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wgmnan306/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wgmnan306/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wgmnan306/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wgmnan306/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wgmnan306/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wgmnan306/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wgmnan306/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wgmnan306/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wgmnan306/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wgmnan306/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wgmnan306/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wgmnan306/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wgmnan306/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wgmnan306/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wgmnan306/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>华美汽车首届卡丁车大赛决出总冠军</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/01/20190127_160349_HDR_DC-600x400.jpg" />
 <h6>华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛男子组决出的冠亚季军，中间也是总决赛冠军霍先生，右为华美汽车老板杨先生。（陈雨/大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年01月31日讯】（记者陈雨<ahref="https://github.com/wgmnan306/djy/blob/master/gb/tag/%E6%B8%A9%E5%93%A5%E5%8D%8E.md#1">温哥华</a>报导）位于<ahref="https://github.com/wgmnan306/djy/blob/master/gb/tag/%E5%88%97%E6%B2%BB%E6%96%87.md#1">列治文</a>的<ahref="https://github.com/wgmnan306/djy/blob/master/gb/tag/%E5%8D%8E%E7%BE%8E%E6%B1%BD%E8%BD%A6.md#1">华美汽车</a>为答谢十多年来客户的支持，于1月27日在Speeders in Door ?ProKarts室内赛车场举行了第一届华美汽车卡丁车大赛。在两轮比赛后，决出了总冠军。</p>
+<p>【大纪元2019年01月31日讯】（记者陈雨<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B8%A9%E5%93%A5%E5%8D%8E.md#1">温哥华</a>报导）位于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%88%97%E6%B2%BB%E6%96%87.md#1">列治文</a>的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%8E%E7%BE%8E%E6%B1%BD%E8%BD%A6.md#1">华美汽车</a>为答谢十多年来客户的支持，于1月27日在Speeders in Door ?ProKarts室内赛车场举行了第一届华美汽车卡丁车大赛。在两轮比赛后，决出了总冠军。</p>
 <p>比赛在下午1：00开始，参赛选手有93人，分男子组和女子组，每位选手参加两次比赛，比赛为计时赛，以单圈最佳成绩为最终成绩，每组将产生冠亚季军，总冠军将获得1,000元奖金。</p>
-<figure id="attachment_11013686" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/01/20190127_132201_HDR_D.jpg"><img class="size-medium wp-image-11013686" src="https://i.epochtimes.com/assets/uploads/2019/01/20190127_132201_HDR_D-450x800.jpg" alt="华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛车手准备就绪，等待比赛。（陈雨/大纪元）" width="450" b="800" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/wgmnan306/djy/blob/master/gb/tag/%E5%8D%8E%E7%BE%8E%E6%B1%BD%E8%BD%A6.md#1">华美汽车</a>首届卡丁车大赛在<ahref="https://github.com/wgmnan306/djy/blob/master/gb/tag/%E5%88%97%E6%B2%BB%E6%96%87.md#1">列治文</a>举行。图为卡丁车赛车手准备就绪，等待比赛。（陈雨/大纪元）</figcaption></figure>
+<figure id="attachment_11013686" aria-describedby="caption-attachment-11013686" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/01/20190127_132201_HDR_D.jpg"><img class="size-medium wp-image-11013686" src="https://i.epochtimes.com/assets/uploads/2019/01/20190127_132201_HDR_D-450x800.jpg" alt="华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛车手准备就绪，等待比赛。（陈雨/大纪元）" width="450" b="800" /></a><figcaption id="caption-attachment-11013686" class="wp-caption-text"><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%8E%E7%BE%8E%E6%B1%BD%E8%BD%A6.md#1">华美汽车</a>首届卡丁车大赛在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%88%97%E6%B2%BB%E6%96%87.md#1">列治文</a>举行。图为卡丁车赛车手准备就绪，等待比赛。（陈雨/大纪元）</figcaption></figure>
 <p>比赛前，参赛选手们带着头盔坐在车里列队等待，个个蓄势待发，摩拳擦掌，就等一声令下。</p>
 <p>比赛开始，安静的环形跑道很快就充斥着引擎的嚎叫、奔驰的呼啸和人们的欢呼声，10辆赛车争先恐后、一路奔驰。</p>
 <p>因为跑道是弯曲环绕的，所以赛车时而加速前冲，时而减速拐弯，还不时躲避其他赛车和跑道护栏。拼着自己的努力唯恐落下的赛车手们常常发生碰撞挤兑，更严重的是转弯速度没控制好时，直接冲撞向跑道护栏，车就熄火了，这会直接影响到比赛计时的。更多的选手凭着经验，熟练的技能顺利完成比赛。</p>
-<figure id="attachment_11013687" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/01/20190127_143448_HDR_R.jpg"><img class="size-large wp-image-11013687" src="https://i.epochtimes.com/assets/uploads/2019/01/20190127_143448_HDR_R-600x337.jpg" alt="华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛赛车手在比赛中。（陈雨/大纪元）" width="600" b="337" /></a><figcaption class="wp-caption-text">华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛赛车手在比赛中。（陈雨/大纪元）</figcaption></figure>
+<figure id="attachment_11013687" aria-describedby="caption-attachment-11013687" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/01/20190127_143448_HDR_R.jpg"><img class="size-large wp-image-11013687" src="https://i.epochtimes.com/assets/uploads/2019/01/20190127_143448_HDR_R-600x337.jpg" alt="华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛赛车手在比赛中。（陈雨/大纪元）" width="600" b="337" /></a><figcaption id="caption-attachment-11013687" class="wp-caption-text">华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛赛车手在比赛中。（陈雨/大纪元）</figcaption></figure>
 <p>在两轮比赛后，获得总决赛冠军的霍先生说：卡丁车赛运动是一个很好的运动，对小孩子的成长有很大帮助，是需要综合能力。我参加很多年了，以前也有得过奖，这一次拿冠军很高兴。</p>
 <p>举办这次比赛的华美汽车老板杨先生在谈到初衷时说：“主要是回馈我们老客户，都十多年的老客户了，希望有这样一个机会，大家可以在一起高兴一下，因为马上过年了，组织这个活动，再一个也能提高我们华美汽车的名气，今天来的大部分都是我们的老客户。”</p>
-<figure id="attachment_11013689" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/01/20190127_160854_Burst01_D.jpg"><img class="size-large wp-image-11013689" src="https://i.epochtimes.com/assets/uploads/2019/01/20190127_160854_Burst01_D-600x337.jpg" alt="华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛获奖人员和组织者。（陈雨/大纪元）" width="600" b="337" /></a><figcaption class="wp-caption-text">华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛获奖人员和组织者。（陈雨/大纪元）</figcaption></figure>
-<h2><ahref="https://github.com/wgmnan306/djy/blob/master/gb/tag/%E5%8D%A1%E4%B8%81%E8%BD%A6%E6%AF%94%E8%B5%9B.md#1">卡丁车比赛</a></h2>
+<figure id="attachment_11013689" aria-describedby="caption-attachment-11013689" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/01/20190127_160854_Burst01_D.jpg"><img class="size-large wp-image-11013689" src="https://i.epochtimes.com/assets/uploads/2019/01/20190127_160854_Burst01_D-600x337.jpg" alt="华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛获奖人员和组织者。（陈雨/大纪元）" width="600" b="337" /></a><figcaption id="caption-attachment-11013689" class="wp-caption-text">华美汽车首届卡丁车大赛在列治文举行。图为卡丁车赛获奖人员和组织者。（陈雨/大纪元）</figcaption></figure>
+<h2><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%A1%E4%B8%81%E8%BD%A6%E6%AF%94%E8%B5%9B.md#1">卡丁车比赛</a></h2>
 <p>卡丁车是一种小型赛车，比一般的赛车小，适合喜欢休闲运动的人或初学者，很多国际大赛的赛车手，很多都是从小型赛车开始的。</p>
-<p><ahref="https://github.com/wgmnan306/djy/blob/master/gb/tag/%E5%8D%A1%E4%B8%81%E8%BD%A6%E6%AF%94%E8%B5%9B.md#1">卡丁车比赛</a>，是一项速度、技巧、激情、胆略以及专注度的综合较量，赛车手们在比赛的同时，品享着自己操控赛车的愉悦之感，也体悟成功与失败的不易。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%A1%E4%B8%81%E8%BD%A6%E6%AF%94%E8%B5%9B.md#1">卡丁车比赛</a>，是一项速度、技巧、激情、胆略以及专注度的综合较量，赛车手们在比赛的同时，品享着自己操控赛车的愉悦之感，也体悟成功与失败的不易。</p>
 <p>责任编辑：童宇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/25/n12500043.md#1">加台专家学者热论 未来照护发展前景与机会</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/19/n12485964.md#1">开学 家长喜忧参半 孩子快乐放飞</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/17/n12483489.md#1">温哥华升旗礼庆祝中华民国双十国庆</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/16/n12481461.md#1">加台未来照护论坛 专家学者企业分享洞见</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/9/n12463451.md#1">“台湾 有你真好” 驻温经文处举办线上双十国庆</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/5/n12453611.md#1">大温台侨联合会庆祝双十国庆 四场快闪</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/3/n12451116.md#1">北美台湾商会再捐口罩 温老人院受惠</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/1/n12444133.md#1">2导盲犬以卑诗首席卫生官名字命名</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/10/1/n12443781.md#1">曾丰慧父女做事认真 乐助人不留名</a></li>
-<li><a href="https://github.com/wgmnan306/djy/blob/master/gb/20/9/30/n12440710.md#1">北美台湾商会捐台湾口罩 助温老人院抗疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679986.md#1">加拿大厂商16年前赴台采购 爱上台湾工具机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13646417.md#1">大温哥华台湾同乡会声援乌克兰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13646356.md#1">空大加拿大服务处? 新学期开展新象</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/12/n13640670.md#1">世华温哥华分会捐热血 美丽开心做公益</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/11/n13638344.md#1">庆3.8妇女节 温哥华世华姐妹捐善款 献大爱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632118.md#1">?温哥华台湾侨界联合会 ?持乌克兰?主?由</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/8/n13631240.md#1">台湾工具机实体展落幕 订单大爆发 线上延期</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/5/n13624851.md#1">首届温哥华珍奶节7月举行 美食娱乐又开心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/4/n13621104.md#1">温台贸中心与素里商会签MOU 共创新商机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/28/n13612218.md#1">NDP为低收入长者争取 被削津贴将获补偿</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/wgmnan306/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/27/n3668851.md#1" target="_blank">吕溪珍：对大连警察的劝善信</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/9/n10770724.md#1" target="_blank">裴毅然：毛泽东真诚“感谢皇军”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/8/n2455187.md#1" target="_blank">【热点互动】自焚 中共自导的梦魇(3)</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/22/n12494562.md#1">张爱玲的家世 晚清历史里的先人</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/9/30/n12442831.md#1">《圣经》与《推背图》预言的应验与变换3</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/9/30/n12442832.md#1">《圣经》与《推背图》预言的应验与变换4</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/8/10/n12318958.md#1">【命理】怎样才能知道自己是做生意的命？</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/28/n12508757.md#1">【罗厨寻味】椒盐鱼骨</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/28/n12509181.md#1">【新闻看点】中共密谋颠覆美国 对美媒操控公开</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/29/n12510015.md#1">【西岸观察】川普政府内鬼现身 拜登阵营分裂</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/27/n12505552.md#1">美国11岁才女购露营车 自己装修成温馨小家</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/27/n12504450.md#1">【拍案惊奇】拜登家爆更惊人丑闻 五中开幕不开心</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/26/n12503917.md#1">【新闻看点】五中大戏登场 专家预测川普赢</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/26/n12503856.md#1">高圆圆女儿抓周全场嗨翻 赵树海谈孙女眉飞色舞</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/27/n12506230.md#1">汤唯开工第一天 公婆带全家人送应援车</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/27/n12504715.md#1">TWICE盼为粉丝带来力量 正规二辑32区iTunes夺冠</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/27/n12504942.md#1">袁惟仁惊传跌倒再陷昏迷 住进加护病房</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/27/n12506472.md#1">朱茵开工过49岁生日 获黄贯中隔空送歌贺寿</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/9/19/n12415906.md#1">朋友隔天才回讯息 这行为犯了多大禁忌？</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/26/n12503459.md#1">脾胃喜欢甜的 5种甘味食物补脾养胃、防胃病</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/23/n12496965.md#1">心悸、胃胀是驼背惹的祸 端正姿势预防一身病</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/28/n12507771.md#1">前3次大选预测都准 “候选人饼干”看好川普</a></li>
-<li><a href="https://github.com/eimtjk382/djy/blob/master/gb/20/10/29/n12509968.md#1">主人忘记带走 小狗花26天走60多公里回家</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wgmnan306/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wgmnan306/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/30/n11013654.htm">华美汽车首届卡丁车大赛决出总冠军</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/30/n11013654.htm">华美汽车首届卡丁车大赛决出总冠军</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wgmnan306/djy/blob/master/gb/19/1/30/n11013654.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wgmnan306/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wgmnan306/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wgmnan306/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wgmnan306/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wgmnan306/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/1/30/n11013654.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
